--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,9 +1,10 @@
 @import 'eve-fonts';
 
-
-
 @headerText: #f2f2f2;
 @headerOutline: #000000;
+@mailShellBackgroundColor: rgba(73, 76, 81, .6);
+
+
 
 * {
   margin: 0px;
@@ -12,6 +13,35 @@
 .main-div {
   background-image: url('../assets/background-nebula.jpg');
   background-size: 'contain';
+}
+
+.sidebar-shell {
+  height: 100vh;
+  width: 20%;
+  float: left;
+  overflow: hidden
+}
+
+.sidebar-content {
+  width: 20%;
+  height: 100vh;
+  margin: 0px 5px;
+  line-height: 1.5em;
+}
+
+.mail-shell {
+  height: 100vh;
+  width: 80%;
+  background: @mailShellBackgroundColor;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.mail-headers {
+  width: 80%;
+  height: 100vh;
+  margin: 0px;
+  padding: 10px;
 }
 
 .header {
