--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,8 +1,11 @@
 @import 'eve-fonts';
+@import '../../node_modules/react-quill/dist/quill.snow.css';
+@import '../../node_modules/react-quill/dist/quill.bubble.css';
 
 @headerText: #f2f2f2;
 @headerOutline: #000000;
 @mailShellBackgroundColor: rgba(73, 76, 81, .6);
+@composeShellBackgroundColor: rgba(0, 0, 0, 1);
 
 
 
@@ -12,7 +15,7 @@
 
 .main-div {
   background-image: url('../assets/background-nebula.jpg');
-  background-size: 'contain';
+  background-size: contain;
 }
 
 .sidebar-shell {
@@ -45,9 +48,54 @@
 }
 
 .header {
-  font-family: 'eve';
-  font-style: 'italic';
-  font-weight: 'bold';
+  font-family: eve;
+  font-style: italic;
+  font-weight: bold;
   color: @headerText;
   text-shadow: 1px 1px @headerOutline;
+}
+
+.compose-shell {
+  position: absolute;
+  font-family: eve;
+  color: @headerText;
+  text-shadow: 1px 1px @headerOutline;
+  background-color: @composeShellBackgroundColor;
+  z-index: 10;
+  top: 40%;
+  right: 2%;
+  width: 40%;
+  height: 60%;
+  margin: 0px;
+}
+
+.compose-shell-min {
+  position: absolute;
+  font-family: eve;
+  color: @headerText;
+  text-shadow: 1px 1px @headerOutline;
+  background-color: @composeShellBackgroundColor;
+  z-index: 10;
+  top: 95.1%;
+  right: 2%;
+  width: 20%;
+  margin: 0px;
+}
+
+.right-buttons {
+  float: right;
+}
+
+.ql-container {
+  position: absolute;
+  height: 67%;
+  width: 100%;
+}
+
+.nameSearchBarDiv {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  left: -200px;
 }
