--- a/src/styles/eve-fonts.less
+++ b/src/styles/eve-fonts.less
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-  font-family: 'eve';
+  font-family: 'eve-italic';
   src: url('./fonts/evesansneue-italic.otf') format("opentype");
   font-weight: 'normal';
   font-style: 'italic';
@@ -15,7 +15,7 @@
 }
 
 @font-face {
-  font-family: 'eve';
+  font-family: 'eve-bold';
   src: url('./fonts/evesansneue-bold.otf') format("opentype");
   font-weight: 'bold';
   font-style: 'normal';
@@ -23,7 +23,7 @@
 }
 
 @font-face {
-  font-family: 'eve';
+  font-family: 'eve-bold-italic';
   src: url('./fonts/evesansneue-bolditalic.otf') format("opentype");
   font-weight: 'bold';
   font-style: 'italic';
@@ -31,7 +31,7 @@
 }
 
 @font-face {
-  font-family: 'eve';
+  font-family: 'eve-sans-condensed';
   src: url('./fonts/evesansneue-condensed.otf') format("opentype");
   font-weight: 'normal';
   font-style: 'normal';
@@ -39,7 +39,7 @@
 }
 
 @font-face {
-  font-family: 'eve';
+  font-family: 'eve-sans-condensed-bold';
   src: url('./fonts/evesansneue-condensedbold.otf') format("opentype");
   font-weight: 'bold';
   font-style: 'normal';
@@ -47,7 +47,7 @@
 }
 
 @font-face {
-  font-family: 'eve';
+  font-family: 'eve-sans-condensed-italic';
   src: url('./fonts/evesansneue-condenseditalic.otf') format("opentype");
   font-weight: 'normal';
   font-style: 'italic';
@@ -55,7 +55,7 @@
 }
 
 @font-face {
-  font-family: 'eve';
+  font-family: 'eve-sans-condensed-bold-italic';
   src: url('./fonts/evesansneue-condensedbolditalic.otf') format('opentype');
   font-weight: 'bold';
   font-style: 'italic';
@@ -63,7 +63,7 @@
 }
 
 @font-face {
-  font-family: 'eve';
+  font-family: 'eve-sans-expanded';
   src: url('./fonts/evesansneue-expanded.otf') format("opentype");
   font-weight: 'normal';
   font-style: 'normal';
@@ -71,7 +71,7 @@
 }
 
 @font-face {
-  font-family: 'eve';
+  font-family: 'eve-sans-expanded-bold';
   src: url('./fonts/evesansneue-expandedbold.otf') format("opentype");
   font-weight: 'bold';
   font-style: 'normal';
@@ -79,7 +79,7 @@
 }
 
 @font-face {
-  font-family: 'eve';
+  font-family: 'eve-sans-expanded-italic';
   src: url('./fonts/evesansneue-expandeditalic.otf') format("opentype");
   font-weight: 'normal';
   font-style: 'italic';
@@ -87,7 +87,7 @@
 }
 
 @font-face {
-  font-family: 'eve';
+  font-family: 'eve-sans-expanded-bold-italic';
   src: url('./fonts/evesansneue-expandedbolditalic.otf') format("opentype");
   font-weight: 'bold';
   font-style: 'italic';
