--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -5,8 +5,9 @@
 @headerText: #f2f2f2;
 @headerOutline: #000000;
 @mailShellBackgroundColor: rgba(73, 76, 81, .6);
+@sidebarButtonBackgroundColor: rgba(0, 0, 0, .3);
 @composeShellBackgroundColor: rgba(0, 0, 0, 1);
-
+@pageButtonBackground: rgba(0, 0, 0, 0);
 
 
 * {
@@ -62,21 +63,56 @@ body, html {
 
 .sidebar-top-row-buttons {
   width: 50%;
+  background-color: @sidebarButtonBackgroundColor;
+}
+
+.sidebar-page-div {
+  display: flex;
+  justify-content: space-between;
+  height: 15%;
+  background-color: @sidebarButtonBackgroundColor;
+}
+
+.sidebar-page-buttons {
+  height: 100%;
+  width: 25%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  background-color: @pageButtonBackground;
+}
+
+.sidebar-page-button-left {
+  background-image: url('../assets/arrow-icon-flipped.png');
+}
+
+.sidebar-page-button-right {
+  background-image: url('../assets/arrow-icon.png');
 }
 
 .sidebar-buttons {
   height: 10%;
+  font-family: 'eve-sans-expanded-bold';
+  font-size: 200%;
+  color: @headerText;
+  text-shadow: 4px 4px @headerOutline;
+  background-color: @sidebarButtonBackgroundColor;
 }
 
 .sidebar-logout-div {
-  height: 35%;
+  height: 20%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
 }
 
 .sidebar-logout-button {
-  height: 50%;
+  height: 100%;
+  font-family: 'eve-sans-expanded-bold';
+  font-size: 225%;
+  color: @headerText;
+  text-shadow: 4px 4px @headerOutline;
+  background-color: @sidebarButtonBackgroundColor;
 }
 
 .refresh-button {
@@ -125,27 +161,44 @@ body, html {
   width: 12vh;
 }
 
+.header-outer-div {
+  display: flex;
+  width: 100%;
+}
+
 .header {
-  font-family: eve;
-  font-style: italic;
-  font-weight: bold;
+  font-family: 'eve-sans-expanded-bold';
   color: @headerText;
-  text-shadow: 1px 1px @headerOutline;
+  text-shadow: 2px 2px @headerOutline;
   display: flex;
   align-items: flex-start;
   border-bottom: .2px solid white;
-  width: 100%;
+  width: 95%;
   padding: 10px 0px;
 }
 
 .header-sender {
-  width: 40vh;
+  width: 25%;
   align-items: center;
 }
 
 .header-subject {
-  width: 80vh;
+  width: 55%;
   align-items: center;
+}
+
+.header-timestamp {
+  width: 15%;
+  align-items: center;
+}
+
+.header-delete-button {
+  width: 5%;
+  background-image: url('../assets/trash-icon.png');
+  background-size: 70%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: @mailShellBackgroundColor;
 }
 
 .compose-shell {
