--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -115,6 +115,10 @@ body, html {
   background-color: @sidebarButtonBackgroundColor;
 }
 
+.sidebar-page-number {
+  color: @headerText;
+}
+
 .refresh-button {
   background-image: url(../assets/refresh-icon.png);
   background-size: 115%;
