--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -3,6 +3,7 @@
 @import '../../node_modules/react-quill/dist/quill.bubble.css';
 
 @headerText: #f2f2f2;
+@headerTextActive: #ff0000;
 @headerOutline: #000000;
 @mailShellBackgroundColor: rgba(73, 76, 81, .6);
 @sidebarButtonBackgroundColor: rgba(0, 0, 0, .3);
@@ -99,6 +100,15 @@ body, html {
   background-color: @sidebarButtonBackgroundColor;
 }
 
+.sidebar-buttons-active {
+  height: 10%;
+  font-family: 'eve-sans-expanded-bold';
+  font-size: 200%;
+  color: @headerTextActive;
+  text-shadow: 4px 4px @headerOutline;
+  background-color: @sidebarButtonBackgroundColor;
+}
+
 .sidebar-logout-div {
   height: 20%;
   display: flex;
@@ -115,7 +125,14 @@ body, html {
   background-color: @sidebarButtonBackgroundColor;
 }
 
-.sidebar-page-number {
+.sidebar-page-number-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: 'eve-sans-expanded-bold';
+  font-size: 200%;
+  height: 100%;
   color: @headerText;
 }
 
